// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`welcome in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1,
                "flex": 1,
                "gap": 0,
                "justifyContent": "center",
                "marginTop": 12,
                "padding": 26,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#e4e4e7",
                "borderRadius": 22,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Image
              accessibilityLabel="Expyrico"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/logo-mark.png",
                }
              }
              style={
                {
                  "borderRadius": 18.92,
                  "height": 86,
                  "width": 86,
                }
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#0a0a0a",
                "fontSize": 40,
                "fontWeight": "700",
                "marginTop": 20,
              }
            }
          >
            expyrico
          </Text>
          <Text
            style={
              {
                "color": "#71717a",
                "fontSize": 16,
                "lineHeight": 24,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            Track what you have, spot what expires next, and waste less food.
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 10,
                "marginTop": 24,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#0a0a0a",
                    },
                  ]
                }
              >
                Fresh
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#71717a",
                    },
                  ]
                }
              >
                pantry view
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#fbbf24",
                    },
                  ]
                }
              >
                Soon
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#71717a",
                    },
                  ]
                }
              >
                expiry alerts
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 12,
            }
          }
        >
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-in"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Create account"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0a0a0a",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-up"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#0a0a0a",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Create account
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1,
                "flex": 1,
                "gap": 0,
                "justifyContent": "center",
                "marginTop": 12,
                "padding": 26,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#fde0c2",
                "borderRadius": 28,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Image
              accessibilityLabel="Expyrico"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/logo-mark.png",
                }
              }
              style={
                {
                  "borderRadius": 18.92,
                  "height": 86,
                  "width": 86,
                }
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#5b3a1f",
                "fontSize": 40,
                "fontWeight": "700",
                "marginTop": 20,
              }
            }
          >
            expyrico
          </Text>
          <Text
            style={
              {
                "color": "#a47148",
                "fontSize": 17,
                "lineHeight": 24,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            Track what you have, spot what expires next, and waste less food.
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 10,
                "marginTop": 24,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#ea580c",
                    },
                  ]
                }
              >
                Fresh
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#a47148",
                    },
                  ]
                }
              >
                pantry view
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#fbbf24",
                    },
                  ]
                }
              >
                Soon
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#a47148",
                    },
                  ]
                }
              >
                expiry alerts
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 12,
            }
          }
        >
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#fbbf24",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-in"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#5b3a1f",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Create account"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#ea580c",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-up"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#ea580c",
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                Create account
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1,
                "flex": 1,
                "gap": 0,
                "justifyContent": "center",
                "marginTop": 12,
                "padding": 26,
              },
              {
                "backgroundColor": "rgba(255,255,255,0.08)",
                "borderColor": "rgba(255,255,255,0.12)",
                "borderRadius": 28,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Image
              accessibilityLabel="Expyrico"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/logo-mark.png",
                }
              }
              style={
                {
                  "borderRadius": 18.92,
                  "height": 86,
                  "width": 86,
                }
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#fafafa",
                "fontSize": 40,
                "fontWeight": "700",
                "marginTop": 20,
              }
            }
          >
            expyrico
          </Text>
          <Text
            style={
              {
                "color": "rgba(250,250,250,0.7)",
                "fontSize": 16,
                "lineHeight": 24,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            Track what you have, spot what expires next, and waste less food.
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 10,
                "marginTop": 24,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#a855f7",
                    },
                  ]
                }
              >
                Fresh
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                    },
                  ]
                }
              >
                pantry view
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#a5f3fc",
                    },
                  ]
                }
              >
                Soon
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "rgba(250,250,250,0.7)",
                    },
                  ]
                }
              >
                expiry alerts
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 12,
            }
          }
        >
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#a5f3fc",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-in"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#fafafa",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Create account"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#a855f7",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-up"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#a855f7",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Create account
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderWidth": 1,
                "flex": 1,
                "gap": 0,
                "justifyContent": "center",
                "marginTop": 12,
                "padding": 26,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 28,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 10,
              }
            }
          >
            <Image
              accessibilityLabel="Expyrico"
              resizeMode="contain"
              source={
                {
                  "testUri": "../../../apps/mobile/assets/logo-mark.png",
                }
              }
              style={
                {
                  "borderRadius": 18.92,
                  "height": 86,
                  "width": 86,
                }
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#1d1b20",
                "fontSize": 40,
                "fontWeight": "700",
                "marginTop": 20,
              }
            }
          >
            expyrico
          </Text>
          <Text
            style={
              {
                "color": "#65558f",
                "fontSize": 16,
                "lineHeight": 24,
                "marginTop": 8,
                "textAlign": "center",
              }
            }
          >
            Track what you have, spot what expires next, and waste less food.
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 10,
                "marginTop": 24,
                "width": "100%",
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#65558f",
                    },
                  ]
                }
              >
                Fresh
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#65558f",
                    },
                  ]
                }
              >
                pantry view
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "borderRadius": 18,
                    "flex": 1,
                    "padding": 12,
                  },
                  {
                    "backgroundColor": "#ffffff",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 15,
                      "fontWeight": "700",
                    },
                    {
                      "color": "#7c4dff",
                    },
                  ]
                }
              >
                Soon
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                    {
                      "color": "#65558f",
                    },
                  ]
                }
              >
                expiry alerts
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 12,
              "paddingBottom": 12,
            }
          }
        >
          <View
            accessibilityLabel="Sign in"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "#7c4dff",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-in"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#1d1b20",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Sign in
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="Create account"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "minHeight": 50,
                  "paddingHorizontal": 24,
                  "paddingVertical": 15,
                },
                {
                  "backgroundColor": "transparent",
                  "borderRadius": 999,
                  "opacity": 1,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#65558f",
                  "borderWidth": 1.5,
                  "opacity": 1,
                },
                false,
                false,
                false,
                false,
              ]
            }
            testID="welcome-sign-up"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "textAlign": "center",
                    },
                    {
                      "color": "#65558f",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Create account
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;
